button alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -699,10 +699,14 @@ body main section.boardmembers article.boardmember > div{
 }
 .imagelightbox-arrow-right:before{
   margin-left: auto!important;
+  border-right: none!important;
+  border-left-color: #fff!important;
   
 }
 .imagelightbox-arrow-left:before{
   margin-right: auto!important; 
+  border-left: none!important;
+  border-right-color: #fff!important;
 }
 .imagelightbox-arrow{
   width: 4em;
@@ -737,6 +741,7 @@ body main section.boardmembers article.boardmember > div{
   width: 2.5em!important;
   height: 2.5em!important;
 }
+
 
 
 
